Bug 1867042 - Don't force PresShell initialization from ResizeObserver handling. r=fredw

This is unfortunately somewhat hard to test, because paint suppression
is not really quite observable by the page.

This makes sure that we don't report resize observations etc until the
page has been laid out for other reasons.

Differential Revision: https://phabricator.services.mozilla.com/D194910